--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </div>
    </div>
    <button onclick="window.open('https://ali71425.github.io/school-data-page/', '_blank')" style="background-color:#004d40; font-size:16px; margin:20px auto; display:block; padding:12px 24px; border:none; border-radius:8px; color:white; cursor:pointer;">
-    🔗 الانتقال إلى صفحة البيانات المدرسية
+    🔗 الانتقال إلى صفحة  الداشبورد
    </button>
   </div>
   <script>
