--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html dir="rtl" lang="ar">
- <head>
+<head>
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
-  <title>
-   صفحة الاستعلام عن بيانات المدارس
-  </title>
+  <title>صفحة الاستعلام عن بيانات المدارس</title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&amp;display=swap" rel="stylesheet"/>
   <style>
-   body {
+    body {
       font-family: 'Cairo', sans-serif;
       background-color: #f8f9fa;
       margin: 0;
@@ -53,6 +51,9 @@
       color: #999;
       margin-top: 10px;
     }
+    .table-container {
+      overflow-x: auto;
+    }
     table {
       width: 100%;
       border-collapse: collapse;
@@ -71,92 +72,90 @@
     table tr:nth-child(even) {
       background-color: #f2f2f2;
     }
+
+    /* تحسين التوافق مع الجوال */
+    @media (max-width: 600px) {
+      h1, h2 {
+        font-size: 18px;
+      }
+
+      .search-container, #passwordPrompt {
+        padding: 15px;
+      }
+
+      table th, table td {
+        font-size: 12px;
+        padding: 6px;
+      }
+
+      button {
+        width: 100%;
+        padding: 12px;
+        font-size: 15px;
+      }
+
+      input[type="text"], input[type="password"] {
+        font-size: 14px;
+        padding: 10px;
+      }
+
+      .table-container {
+        overflow-x: auto;
+      }
+
+      table {
+        min-width: 900px;
+      }
+    }
   </style>
- </head>
- <body>
+</head>
+<body>
   <div id="passwordPrompt">
-   <h2>
-    🔐 الرجاء إدخال كلمة المرور للوصول إلى صفحة الاستعلام
-   </h2>
-   <input id="passwordInput" placeholder="أدخل كلمة المرور" type="password"/>
-   <button onclick="checkPassword()">
-    دخول
-   </button>
-   <p id="errorMessage" style="color: red; display: none;">
-    ❌ كلمة المرور غير صحيحة
-   </p>
+    <h2>🔐 الرجاء إدخال كلمة المرور للوصول إلى صفحة الاستعلام</h2>
+    <input id="passwordInput" type="password" placeholder="أدخل كلمة المرور"/>
+    <button onclick="checkPassword()">دخول</button>
+    <p id="errorMessage" style="color: red; display: none;">❌ كلمة المرور غير صحيحة</p>
   </div>
+
   <div id="mainContent" style="display:none;">
-   <h1>
-    🔍 الاستعلام عن بيانات المدارس
-   </h1>
-   <div class="search-container" style="background: linear-gradient(to left, #e0f2f1, #ffffff); border: 1px solid #cde0d3;">
-    <h2 style="color: #004d40; margin-bottom: 15px;">
-     📌 أدخل 3 أحرف على الأقل للبحث في بيانات المدارس
-    </h2>
-    <input id="searchInput" placeholder="ابحث بالرقم الإحصائي، اسم المدير، المنسق، أو رقم الجوال..." style="border: 2px solid #80cbc4; background-color: #f9fdfc;" type="text"/>
-    <div id="tooShort" style="display:none;">
-     ⚠️ أدخل 3 أحرف أو أرقام على الأقل للبحث
+    <h1>🔍 الاستعلام عن بيانات المدارس</h1>
+    <div class="search-container" style="background: linear-gradient(to left, #e0f2f1, #ffffff); border: 1px solid #cde0d3;">
+      <h2 style="color: #004d40; margin-bottom: 15px;">📌 أدخل 3 أحرف على الأقل للبحث في بيانات المدارس</h2>
+      <input id="searchInput" type="text" placeholder="ابحث بالرقم الإحصائي، اسم المدير، المنسق، أو رقم الجوال..." style="border: 2px solid #80cbc4; background-color: #f9fdfc;"/>
+      <div id="tooShort" style="display:none;">⚠️ أدخل 3 أحرف أو أرقام على الأقل للبحث</div>
+      <div id="loadingMessage" style="display:none;">⏳ جاري البحث...</div>
     </div>
-    <div id="loadingMessage" style="display:none;">
-     ⏳ جاري البحث...
+
+    <div class="table-container">
+      <table id="resultsTable" style="display:none;">
+        <thead>
+          <tr>
+            <th>الرقم الإحصائي</th>
+            <th>القطاع</th>
+            <th>المكتب</th>
+            <th>النوع</th>
+            <th>اسم المدرسة</th>
+            <th>اسم المدير/ة</th>
+            <th>رقم الجوال</th>
+            <th>اسم المنسق/ة</th>
+            <th>جوال المنسق/ة</th>
+            <th>حالة التأكيد</th>
+            <th>الملاحظات</th>
+            <th>تاريخ التأكيد</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+      <div id="noResults" style="display:none;">لا توجد نتائج مطابقة</div>
     </div>
-   </div>
-   <div class="table-container">
-    <table id="resultsTable" style="display:none;">
-     <thead>
-      <tr>
-       <th>
-        الرقم الإحصائي
-       </th>
-       <th>
-        القطاع
-       </th>
-       <th>
-        المكتب
-       </th>
-       <th>
-        النوع
-       </th>
-       <th>
-        اسم المدرسة
-       </th>
-       <th>
-        اسم المدير/ة
-       </th>
-       <th>
-        رقم الجوال
-       </th>
-       <th>
-        اسم المنسق/ة
-       </th>
-       <th>
-        جوال المنسق/ة
-       </th>
-       <th>
-        حالة التأكيد
-       </th>
-       <th>
-        الملاحظات
-       </th>
-       <th>
-        تاريخ التأكيد
-       </th>
-      </tr>
-     </thead>
-     <tbody>
-     </tbody>
-    </table>
-    <div id="noResults" style="display:none;">
-     لا توجد نتائج مطابقة
-    </div>
-   </div>
-   <button onclick="window.open('https://ali71425.github.io/school-data-page/', '_blank')" style="background-color:#004d40; font-size:16px; margin:20px auto; display:block; padding:12px 24px; border:none; border-radius:8px; color:white; cursor:pointer;">
-    🔗 الانتقال إلى صفحة  الداشبورد
-   </button>
+
+    <button onclick="window.open('https://ali71425.github.io/school-data-page/', '_blank')" style="background-color:#004d40; font-size:16px; margin:20px auto; display:block; padding:12px 24px; border:none; border-radius:8px; color:white; cursor:pointer;">
+      🔗 الانتقال إلى صفحة البيانات المدرسية
+    </button>
   </div>
+
   <script>
-   const passwordKey = "schoolQueryAccess";
+    const passwordKey = "schoolQueryAccess";
     const correctPassword = "admin123";
 
     if (localStorage.getItem(passwordKey) === "granted") {
@@ -211,7 +210,7 @@
 
       setTimeout(() => {
         const filtered = allData.filter(row => {
-          const searchFields = [0, 5, 6, 7]; // الرقم الإحصائي، المدير، الجوال، المنسق
+          const searchFields = [0, 5, 6, 7];
           return searchFields.some(index =>
             (row[index] || "").toString().toLowerCase().includes(keyword)
           );
@@ -235,8 +234,8 @@
           noResults.style.display = "none";
         }
         loadingMessage.style.display = "none";
-      }, 300); // تأخير بسيط لإظهار "جاري البحث"
+      }, 300);
     });
   </script>
- </body>
+</body>
 </html>
