--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <h1>🔍 الاستعلام عن بيانات المدارس</h1>
     <div class="search-container" style="background: linear-gradient(to left, #e0f2f1, #ffffff); border: 1px solid #cde0d3;">
       <h2 style="color: #004d40; margin-bottom: 15px;">📌 أدخل 3 أحرف على الأقل للبحث في بيانات المدارس</h2>
-      <input id="searchInput" type="text" placeholder="ابحث بالرقم الإحصائي، اسم المدير، المنسق، أو رقم الجوال..." style="border: 2px solid #80cbc4; background-color: #f9fdfc;"/>
+      <input id="searchInput" type="text" placeholder="ابحث بالرقم الإحصائي، اسم المدرسة، المدير، المنسق، أو رقم الجوال..." style="border: 2px solid #80cbc4; background-color: #f9fdfc;"/>
       <div id="tooShort" style="display:none;">⚠️ أدخل 3 أحرف أو أرقام على الأقل للبحث</div>
       <div id="loadingMessage" style="display:none;">⏳ جاري البحث...</div>
     </div>
@@ -210,7 +210,7 @@
 
       setTimeout(() => {
         const filtered = allData.filter(row => {
-          const searchFields = [0, 5, 6, 7];
+          const searchFields = [0, 4, 5, 6, 7]; // أضف البحث في اسم المدرسة (رقم العمود 4)
           return searchFields.some(index =>
             (row[index] || "").toString().toLowerCase().includes(keyword)
           );
