--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <h1>🔍 الاستعلام عن بيانات المدارس</h1>
     <div class="search-container" style="background: linear-gradient(to left, #e0f2f1, #ffffff); border: 1px solid #cde0d3;">
       <h2 style="color: #004d40; margin-bottom: 15px;">📌 أدخل 3 أحرف على الأقل للبحث في بيانات المدارس</h2>
-      <input id="searchInput" type="text" placeholder="ابحث بالرقم الإحصائي، اسم المدرسة، المدير، المنسق، أو رقم الجوال..." style="border: 2px solid #80cbc4; background-color: #f9fdfc;"/>
+      <input id="searchInput" type="text" placeholder="ابحث بالرقم الإحصائي، اسم المدرسة، المدير، المنسق، أو رقم الجوال..." style="border: 2px solid #80cbc4; background-color: #f9fdfc; max-width: 400px; margin: 0 auto; display: block;"/>
       <div id="tooShort" style="display:none;">⚠️ أدخل 3 أحرف أو أرقام على الأقل للبحث</div>
       <div id="loadingMessage" style="display:none;">⏳ جاري البحث...</div>
     </div>
@@ -150,7 +150,7 @@
     </div>
 
     <button onclick="window.open('https://ali71425.github.io/school-data-page/', '_blank')" style="background-color:#004d40; font-size:16px; margin:20px auto; display:block; padding:12px 24px; border:none; border-radius:8px; color:white; cursor:pointer;">
-      🔗 الانتقال إلى صفحة البيانات المدرسية
+      🔗 الانتقال إلى صفحة الداشبورد
     </button>
   </div>
 
